Начал работу над новой структурой

--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    compile "com.intellij:annotations:12.0@jar"
     testCompile "junit:junit:4.12"
 }
